Javadoc Updates
Signed-off-by: Andy McCright <j.andrew.mccright@gmail.com>